--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "@xata.io/client": "^0.24.3",
+    "chakra-react-select": "^3.3.9",
     "date-fns": "^2.30.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
@@ -28,6 +29,7 @@
     "next": "13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.0",
     "react-icons": "^4.9.0",
     "recoil": "^0.7.7",
     "typescript": "5.1.3"
